完成程式的基本架構(剩下圖片沒有放置)

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">BabyGame</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_nursery__people">Nursery_People</string>
 
 </resources>
