--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_nursery__people">Nursery_People</string>
+    <string name="title_activity_leavel">Leavel</string>
 
 </resources>
